--- a/hari_raya.html
+++ b/hari_raya.html
@@ -135,39 +135,15 @@
   <canvas id="confettiCanvas"></canvas>
 
   <div id="greetingCards" style="margin-top: 50px; display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
-    <!-- Card 1 -->
+    <!-- Single Card -->
     <div class="card">
       <div class="card-inner">
         <div class="card-front">
-          <img src="Posting_KV-01.jpg" alt="Front Image 1">
+          <img src="Posting_KV-01.jpg" alt="Front Image">
         </div>
         <div class="card-back back-green">
           <h2>Selamat Hari Raya</h2>
           <p>Semoga Syawal ini membawa kebahagiaan dan keberkatan kepada anda dan keluarga.</p>
-        </div>
-      </div>
-    </div>
-    <!-- Card 2 -->
-    <div class="card">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Posting_KV-01.jpg" alt="Front Image 2">
-        </div>
-        <div class="card-back back-peach">
-          <h2>Maaf Zahir & Batin</h2>
-          <p>Mohon maaf atas segala salah dan silap. Selamat menyambut Hari Raya Aidilfitri!</p>
-        </div>
-      </div>
-    </div>
-    <!-- Card 3 -->
-    <div class="card">
-      <div class="card-inner">
-        <div class="card-front">
-          <img src="Posting_KV-01.jpg" alt="Front Image 3">
-        </div>
-        <div class="card-back back-blue">
-          <h2>Salam Aidilfitri</h2>
-          <p>Semoga Syawal ini penuh dengan kegembiraan dan kasih sayang bersama keluarga tercinta.</p>
         </div>
       </div>
     </div>
